making changes to address PR feedback

--- a/learn-m365-pr/m365/viva-connections-plan/1-introduction.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/1-introduction.yml
@@ -2,7 +2,7 @@
 uid: learn.viva-connections-plan.introduction
 title: Introduction
 metadata:
-  unitType: introduction
+  unitType: Introduction
   title: introduction
   description: Learn about best practices, considerations, and technical details to plan for Viva Connections Dashboard, Feed, and Resources.
   ms.date: 6/23/2022
