fix building issues

--- a/learn-m365-pr/m365/viva-connections-set-up/index.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/index.yml
@@ -35,6 +35,7 @@ units:
 - learn.viva-connections-set-up.prepare-content-for-the-feed
 - learn.viva-connections-set-up.set-up-resources
 - learn.viva-connections-set-up.review-audience-targeting-settings-before-launching
+- learn.viva-connections-set-up.add-the-dashboard-and-feed-web-parts-to-the-home-site
 - learn.viva-connections-set-up.summary
 badge:
   uid: learn.viva-connections-set-up.badge
