--- a/learn-m365-pr/wwl/manage-phone-numbers/07-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-phone-numbers/07-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 11/18/2021
+  ms.date: 07/12/2022
   author: wwlpublish
   ms.author: jennyche
   ms.topic: interactive-tutorial
@@ -17,6 +17,39 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
+  - content: "Which of the following items is a benefit of using  Teams Phone with Teams Calling Plans?"
+    choices:
+    - content: "An organization can connect its own supported Session Border Controller to Microsoft Teams Phone without the need for any other on-premises software"
+      isCorrect: false
+      explanation: "That's incorrect. This item is a benefit of using  Teams Phone with Direct Routing."
+    - content: "An organization can keep its preferred operator and contracts"
+      isCorrect: false
+      explanation: "That's incorrect. This item is a benefit of using  Teams Phone with Operator Connect."
+    - content: "It's the simplest option that connects Microsoft Teams Phone to the Public Switched Telephone Network (PSTN)"
+      isCorrect: true
+      explanation: "That's correct.  Teams Phone with Teams Calling Plans is the Microsoft all-in-the-cloud voice solution for Teams users. This design is the simplest option that connects Microsoft  Teams Phone to the PSTN. This configuration enables calls to landlines and mobile phones around the world."
+  - content: "As the Teams administrator for Contoso, Holly Dickson wants to use the address map search feature in the Teams admin center to define an emergency address. When Holly completes this task, which of the following items will be automatically associated with Contoso's emergency address?"
+    choices:
+    - content: "The Public Safety Answering Point (PSAP) that serves the emergency address"
+      isCorrect: false
+      explanation: "That's incorrect. This item isn't automatically associated with an emergency address when you use the address map search feature in the Teams admin center to define an emergency address."
+    - content: "The geo code of the emergency address"
+      isCorrect: true
+      explanation: "That's correct. Each emergency address can have a latitude and longitude (geo code) associated with it. Geo codes are used in some countries/regions to help routing of emergency calls with dynamic locations. A geo code is automatically associated with an emergency address when you use the address map search feature in the Teams admin center to define an emergency address."
+    - content: "The Private Branch Exchange (PBX) that serves the emergency address"
+      isCorrect: false
+      explanation: "That's incorrect. This item isn't automatically associated with an emergency address when you use the address map search feature in the Teams admin center to define an emergency address."
+  - content: "As the Teams administrator for Contoso, Holly Dickson wants to implement the least disruptive form of call sharing to recipients. Which of the following forms of call sharing should Holly implement?"
+    choices:
+    - content: "Group call pickup"
+      isCorrect: true
+      explanation: "That's correct. Group call pickup is less disruptive to recipients than other forms of call sharing, such as call forwarding or simultaneous ringing. Group call pickup is less invasive because users can configure how they want to be notified of an incoming shared call (through audio and visual notification, visual only, or through a banner in the Teams app), and they can decide whether to answer it."
+    - content: "Call forwarding"
+      isCorrect: false
+      explanation: "That's incorrect. This item isn't the least disruptive form of call sharing."
+    - content: "Simultaneous ringing"
+      isCorrect: false
+      explanation: "That's incorrect. This item isn't the least disruptive form of call sharing."
   - content: "Microsoft Teams uses different telephone number types depending on the purpose for which the phone number will be used. Which type of telephone numbers are assigned to Audio Conferencing, auto attendants, and call queues?"
     choices:
     - content: "Service numbers"
@@ -24,29 +57,29 @@ quiz:
       explanation: "That's correct. These numbers are assigned to services such as Audio Conferencing, auto attendants, and call queues. Service phone numbers have a higher concurrent call capacity than user numbers and will vary by country/region and the type of number (whether it's a toll or toll-free service numbers)."
     - content: "User numbers"
       isCorrect: false
-      explanation: "That's incorrect. These numbers can be assigned to users in an organization for calling purposes. Try again."
+      explanation: "That's incorrect. These numbers can be assigned to users in an organization for calling purposes."
     - content: "Geographic numbers"
       isCorrect: false
-      explanation: "That's incorrect. Geographic numbers are a form of user phone numbers. Try again."
-  - content: "Contoso currently has a phone service provider and already has phone numbers for its users and services. It has less than 1,000 phone numbers. As the Teams administrator for Contoso, Allan DeYoung wants to port the company's phone numbers over to Microsoft Teams using the Teams admin center. Allan also wants to establish Microsoft as Contoso's service provider. At that point, Contoso can disconnect its service with its old service provider. What must Allan do to move Contoso's phone numbers over to Microsoft Teams?"
+      explanation: "That's incorrect. Geographic numbers are a form of user phone numbers."
+  - content: "Contoso currently has phone numbers for its users and services, from a phone service provider. It has less than 1,000 phone numbers. As the Teams administrator for Contoso, Allan DeYoung wants to port the company's phone numbers over to Microsoft Teams using the Teams admin center. Allan also wants to establish Microsoft as Contoso's service provider. At that point, Contoso can disconnect its service with its old service provider. What must Allan do to move Contoso's phone numbers over to Microsoft Teams?"
     choices:
     - content: "Create a port order to transfer Contoso's phone numbers to Microsoft Teams"
       isCorrect: true
       explanation: "That's correct. If an organization currently has a phone service provider or carrier and already has phone numbers for its users or services, it must create a port order to transfer those phone numbers to Microsoft Teams. After it ports its phone numbers over to Teams, Microsoft becomes its service provider. At that point, the organization can disconnect its service with its old service provider or carrier."
     - content: "Use PowerShell to bulk import Contoso's phone numbers into Microsoft Teams"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't a valid way to move phone numbers from a service provider over to Microsoft Teams. Try again."
+      explanation: "That's incorrect. This item isn't a valid option to move phone numbers from a service provider over to Microsoft Teams."
     - content: "Submit a request to the Phone Number Support Center"
       isCorrect: false
-      explanation: "That's incorrect. The Phone Number Support Center is required when an organization can't get or port phone numbers using the Microsoft Teams admin center. This situation doesn't apply in Contoso's scenario. Try again."
+      explanation: "That's incorrect. The Phone Number Support Center is required when an organization can't get or port phone numbers using the Microsoft Teams admin center. This situation doesn't apply in Contoso's scenario."
   - content: "As the Teams administrator for Fabrikam, Holly Spencer wants all calls between users at Fabrikam to be handled internally. Holly doesn't want the calls to ever go to the Public Switched Telephone Network (PSTN). Holly also wants this design to apply to calls between Fabrikam users located in different geographical areas, which will remove long-distance costs on these internal calls. Which of the following technologies will enable Fabrikam to achieve these business goals?"
     choices:
     - content: "Private Branch Exchange (PBX)"
       isCorrect: false
-      explanation: "That's incorrect. A PBX is a telephone exchange or switching system that serves a private organization. Try again."
+      explanation: "That's incorrect. A PBX is a telephone exchange or switching system that serves a private organization."
     - content: "Session Initiation Protocol (SIP) trunks"
       isCorrect: false
-      explanation: "That's incorrect. A SIP trunk enables an end point’s PBX phone system to send and receive calls through the Internet. Try again."
-    - content: "Microsoft Phone System"
+      explanation: "That's incorrect. A SIP trunk enables an end point’s PBX phone system to send and receive calls through the Internet."
+    - content: "Microsoft  Teams Phone"
       isCorrect: true
-      explanation: "That's correct. Phone System is Microsoft's technology for enabling call control and PBX capabilities in the Microsoft 365 or Office 365 cloud with Microsoft Teams. Calls between users in an organization are handled internally within Phone System. They never go to the PSTN. This design applies to calls between users in an organization located in different geographical areas, removing long-distance costs on these internal calls."
+      explanation: "That's correct. Teams Phone is Microsoft's technology for enabling call control and PBX capabilities in the Microsoft 365 or Office 365 cloud with Microsoft Teams. Calls between users in an organization are handled internally  and they never go to the PSTN. This design applies to calls between users in an organization located in different geographical areas, removing long-distance costs on these internal calls."
