--- a/learn-m365-pr/wwl/manage-users-groups/6-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-users-groups/6-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge Check
 metadata:
   title: Knowledge Check
   description: "Knowledge Check"
-  ms.date: 03/31/2022
+  ms.date: 07/13/2022
   author: wwlpublish
   ms.author: brhinkel
   ms.topic: interactive-tutorial
@@ -46,7 +46,7 @@ quiz:
       explanation: "Incorrect. This item isn't a drawback of deploying AD DS on an Azure virtual machine. Try again."
     - content: "You can't use drive C for AD DS storage"
       isCorrect: false
-      explanation: "Incorrect. It's not that you can't use drive C for AD DS storage, but you shouldn't. Instead, you should deploy one or more additional Azure data disks to store the AD DS database, logs ,and SYSVOL. Try again."
+      explanation: "Incorrect. It's not that you can't use drive C for AD DS storage, but you shouldn't. Instead, you should deploy one or more additional Azure data disks to store the AD DS database, logs, and SYSVOL. Try again."
     - content: "It doesn't make any use of Azure AD"
       isCorrect: true
       explanation: "Correct. You can deploy AD DS on an Azure virtual machine to enable scalability and availability for an on-premises AD DS. However, deploying AD DS on an Azure virtual machine doesn't make any use of Azure AD."
@@ -71,4 +71,4 @@ quiz:
       explanation: "Correct. Administrators can synchronize AD DS and Azure AD together using the Azure AD Connect tool. Azure AD Connect enables IT to take advantage of the benefits each service has to offer. It's an on-premises Microsoft application that's designed to meet and accomplish an organization's hybrid identity goals."
     - content: "Active Directory Lightweight Directory Services (AD LDS)"
       isCorrect: false
-      explanation: "Incorrect. AD LDS is an independent mode of Active Directory, minus infrastructure features, that provides directory services for applications. Try again."
+      explanation: "Incorrect. AD LDS is an independent mode of Active Directory, minus infrastructure features that provides directory services for applications. Try again."
