--- a/learn-m365-pr/wwl/prepare-your-windows-10-devices-for-co-management/4-configure-configuration-manager.yml
+++ b/learn-m365-pr/wwl/prepare-your-windows-10-devices-for-co-management/4-configure-configuration-manager.yml
@@ -4,15 +4,16 @@ title: Configure Configuration Manager for Co-management
 metadata:
   title: Configure Configuration Manager for Co-management
   description: "Configure Configuration Manager for Co-management"
-  ms.date: 06/25/2021
+  ms.date: 07/13/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 4
 content: |
-  [!include[](includes/3-configure-configuration-manager.md)]
+  [!include[](includes/4-configure-configuration-manager.md)]
 quiz:
   title: "Check your knowledge"
   questions:
@@ -20,10 +21,10 @@ quiz:
     choices:
     - content: "Targeted devices"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't the option to enroll selected devices. Try again."
+      explanation: "Incorrect. This item isn't the option to enroll selected devices."
     - content: "Pilot"
       isCorrect: true
-      explanation: "That's correct. The Pilot option should be selected to enroll selected devices."
+      explanation: "Correct. The Pilot option should be selected to enroll selected devices."
     - content: "Limited"
       isCorrect: false
-      explanation: "That's incorrect. This item isn't the option to enroll selected devices."
+      explanation: "Incorrect. This item isn't the option to enroll selected devices."
