--- a/learn-m365-pr/m365/viva-connections-set-up/7-add-the-dashboard-and-feed-web-parts-to-the-home-site.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/7-add-the-dashboard-and-feed-web-parts-to-the-home-site.yml
@@ -4,12 +4,12 @@ title: Add the Dashboard and Feed web parts to the home site
 metadata:
   unitType: learning-content
   title: Add the Dashboard and Feed web parts to the home site
-  description: Use web parts to add the the Dashboard and Feed to the home site. 
+  description: Use web parts to add the Dashboard and Feed to the home site. 
   ms.date: 6/23/2022
   author: maggierui
   ms.author: ruihu
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-durationInMinutes: 5
+durationInMinutes: 6
 content: |
   [!include[](includes/7-add-the-dashboard-and-feed-web-parts-to-the-home-site.md)]
