--- a/learn-m365-pr/wwl/prepare-your-windows-10-devices-for-co-management/2-plan-your-co-management-strategy.yml
+++ b/learn-m365-pr/wwl/prepare-your-windows-10-devices-for-co-management/2-plan-your-co-management-strategy.yml
@@ -4,9 +4,11 @@ title: Plan your Co-management strategy
 metadata:
   title: Plan your Co-management strategy
   description: "Plan your Co-management strategy"
-  ms.date: 07/13/2022
+  ms.date: 07/14/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
@@ -19,10 +21,10 @@ quiz:
     choices:
     - content: "Intune"
       isCorrect: false
-      explanation: "Incorrect. After enabling co-management on these devices, this isn't the service that will manage all workloads."
+      explanation: "Incorrect. After co-management is enabled on devices, this service isn't the one that will manage all workloads."
     - content: "Azure AD"
       isCorrect: false
-      explanation: "Incorrect. After enabling co-management on these devices, this isn't the service that will manage all workloads."
+      explanation: "Incorrect. After co-management is enabled on devices, this service isn't the one that will manage all workloads."
     - content: "Configuration Manager"
       isCorrect: true
-      explanation: "Correct. After you enable co-management, Configuration Manager continues to manage all workloads. When you decide that you're ready, Intune can start managing available workloads."
+      explanation: "Correct. After co-management is enabled, Configuration Manager continues to manage all workloads. When you decide that you're ready, Intune can start managing available workloads."
