--- a/learn-m365-pr/wwl/prepare-your-windows-10-devices-for-co-management/6-modify-your-co-management-settings.yml
+++ b/learn-m365-pr/wwl/prepare-your-windows-10-devices-for-co-management/6-modify-your-co-management-settings.yml
@@ -4,9 +4,11 @@ title: Modify your co-management settings
 metadata:
   title: Modify your co-management settings
   description: "Modify your co-management settings"
-  ms.date: 07/13/2022
+  ms.date: 07/14/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
