--- a/learn-m365-pr/wwl/prepare-your-windows-10-devices-for-co-management/7-transfer-workload-management.yml
+++ b/learn-m365-pr/wwl/prepare-your-windows-10-devices-for-co-management/7-transfer-workload-management.yml
@@ -4,9 +4,11 @@ title: Transfer workload management from Configuration Manager to Intune
 metadata:
   title: Transfer workload management from Configuration Manager to Intune
   description: "Transfer workload management from Configuration Manager to Intune"
-  ms.date: 07/13/2022
+  ms.date: 07/14/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
