--- a/learn-m365-pr/wwl/implement-endpoint-security-microsoft-intune/8-knowledge-check.yml
+++ b/learn-m365-pr/wwl/implement-endpoint-security-microsoft-intune/8-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 07/13/2022
+  ms.date: 07/14/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -46,7 +46,7 @@ quiz:
       explanation: "Correct. One way to avoid conflicts is to NOT use different baselines, instances of the same baseline, or different policy types and instances to manage the same settings on a device."
     - content: "Use different baselines"
       isCorrect: false
-      explanation: "Incorrect. To avoid policy conflicts, organizations should not use different baselines."
+      explanation: "Incorrect. To avoid policy conflicts, organizations shouldn't use different baselines."
     - content: "Use different policy types to manage the same settings on a device"
       isCorrect: false
-      explanation: "Incorrect. Incorrect. To avoid policy conflicts, organizations should not use different policy types and instances to manage the same settings on a device."
+      explanation: "Incorrect. Incorrect. To avoid policy conflicts, organizations shouldn't use different policy types and instances to manage the same settings on a device."
