changed files by pdets auto publish service, publishid[da868a67-62c9-40e3-bab7-912cd3b49940] and do [publish].

--- a/learn-m365-pr/wwl/prepare-your-windows-10-devices-for-co-management/4-configure-configuration-manager.yml
+++ b/learn-m365-pr/wwl/prepare-your-windows-10-devices-for-co-management/4-configure-configuration-manager.yml
@@ -17,7 +17,7 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "Fabrikam ran the Co-management Configuration Wizard. The \"Automatic enrollment in Intune\" setting enabled Fabrikam to select whether it wanted to automatically enroll all devices, selected devices, or no devices that are managed by Configuration Manager in Intune. For this setting, which option enabled Fabrikam to enroll selected devices?"
+  - content: "Fabrikam ran the Co-management Configuration Wizard. Which \"Automatic enrollment in Intune\" option enabled Fabrikam to automatically enroll selected devices?"
     choices:
     - content: "Targeted devices"
       isCorrect: false
