changed files by pdets auto publish service, publishid[7a9b3c64-4a66-45f8-aef0-87615ad5815e] and do [publish].

--- a/learn-m365-pr/wwl/explore-device-management-use-microsoft-endpoint-manager/index.yml
+++ b/learn-m365-pr/wwl/explore-device-management-use-microsoft-endpoint-manager/index.yml
@@ -17,7 +17,8 @@ abstract: |
   *   Manage devices using Configuration Manager.
   *   Manage devices using Microsoft Intune.
   *   Create device profiles in Microsoft Intune.
-prerequisites: ""
+prerequisites: |
+  None
 iconUrl: /learn/achievements/generic-badge.svg
 levels:
 - intermediate
