--- a/learn-m365-pr/m365/viva-connections-set-up/3-build-the-dashboard.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/3-build-the-dashboard.yml
@@ -14,7 +14,7 @@ durationInMinutes: 16
 content: |
   [!include[](includes/3-build-the-dashboard.md)]
 quiz:
-    title: Knowledge check for building the dashboard
+    title: Build the Dashboard
     questions:
     - content: "What is the best out-of-box card to add for managing your team’s tasks?"
       choices:
